--- a/monitor/package.json
+++ b/monitor/package.json
@@ -21,5 +21,10 @@
   "devDependencies": {
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/sdk-metrics": "^1.22.0",
+    "@opentelemetry/sdk-node": "^0.49.1"
   }
 }
