--- a/infra/otel-collector-config.yaml
+++ b/infra/otel-collector-config.yaml
@@ -2,36 +2,13 @@ receivers:
   otlp:
     protocols:
       grpc:
-
 exporters:
-  prometheus:
-    endpoint: "0.0.0.0:8889"
-    const_labels:
-      label1: value1
-
-  debug:
-
   otlp:
-    endpoint: jaeger-all-in-one:4317
+    endpoint: tempo:4317
     tls:
       insecure: true
-
-processors:
-  batch:
-
-extensions:
-  health_check:
-  pprof:
-    endpoint: :1888
-
 service:
-  extensions: [pprof, zpages, health_check]
   pipelines:
     traces:
       receivers: [otlp]
-      processors: [batch]
       exporters: [otlp]
-    metrics:
-      receivers: [otlp]
-      processors: [batch]
-      exporters: [prometheus]
