--- a/infra/prometheus.yaml
+++ b/infra/prometheus.yaml
@@ -1,6 +1,11 @@
+global:
+  scrape_interval: 15s
+  evaluation_interval: 15s
+
 scrape_configs:
-  - job_name: "otel-collector"
-    scrape_interval: 10s
+  - job_name: "prometheus"
     static_configs:
-      - targets: ["otel-collector:8889"]
-      - targets: ["otel-collector:8888"]
+      - targets: ["localhost:9090"]
+  - job_name: "tempo"
+    static_configs:
+      - targets: ["tempo:3200"]
