--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.8.0",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.49.1",
     "@opentelemetry/sdk-metrics": "^1.22.0",
     "@opentelemetry/sdk-node": "^0.49.1"
   }
