--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:start": "npm run build && npm run start",
     "start": "node ./dist",
-    "build": "rimraf ./dist && npx tsc --build"
+    "build": "rimraf ./dist && npx tsc --build",
+    "dev": "nodemon ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,19 @@
   },
   "homepage": "https://github.com/andrelmmartins/webscraper-monitor#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.8.0",
     "@opentelemetry/exporter-metrics-otlp-grpc": "^0.49.1",
     "@opentelemetry/sdk-metrics": "^1.22.0",
-    "@opentelemetry/sdk-node": "^0.49.1"
+    "@opentelemetry/sdk-node": "^0.49.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.3"
   }
 }
