--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,17 +1,32 @@
 version: "3"
 services:
-  otel-collector:
-    image: otel/opentelemetry-collector:0.86.0
-    command: ["--config=/etc/otel-collector.yaml"]
+  collector:
+    image: otel/opentelemetry-collector-contrib:latest
+    container_name: collector
+    hostname: collector
+    depends_on:
+      tempo:
+        condition: service_healthy
+      prometheus:
+        condition: service_healthy
+    command: ["--config=/etc/config.yaml"]
     volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector.yaml
+      - ./otel/config.yaml:/etc/config.yaml
+    ports:
+      - "4318:4318" # otlp http
+      - "4317:4317" # otlp grpc
+      - "6666:6666" # prometheus collector exporter scrape
+      - "8888:8888" # prometheus collector scrape
+    networks:
+      - telemetry
 
-  # To eventually offload to Tempo...
   tempo:
     image: grafana/tempo:latest
     command: ["-config.file=/etc/tempo.yaml"]
+    container_name: tempo
+    hostname: tempo
     volumes:
-      - ./tempo.yaml:/etc/tempo.yaml
+      - ./tempo/tempo.yaml:/etc/tempo.yaml
       - ./tempo-data:/tmp/tempo
     ports:
       - "14268" # jaeger ingest
@@ -19,26 +34,58 @@ services:
       - "4317" # otlp grpc
       - "4318" # otlp http
       - "9411" # zipkin
+    healthcheck:
+      interval: 5s
+      retries: 10
+      test: wget --no-verbose --tries=1 --spider http://localhost:3200/status || exit 1
+    networks:
+      - telemetry
 
   prometheus:
     image: prom/prometheus:latest
+    container_name: prometheus
+    hostname: prometheus
     command:
       - --config.file=/etc/prometheus.yaml
       - --web.enable-remote-write-receiver
       - --enable-feature=exemplar-storage
     volumes:
-      - ./prometheus.yaml:/etc/prometheus.yaml
+      - ./prometheus/prometheus.yaml:/etc/prometheus.yaml
     ports:
       - "9090:9090"
+    healthcheck:
+      interval: 5s
+      retries: 10
+      test: wget --no-verbose --tries=1 --spider http://localhost:9090/status || exit 1
+    networks:
+      - telemetry
 
+  # TODO: Add default dashboards on boostrap
   grafana:
-    image: grafana/grafana:10.1.1
+    image: grafana/grafana:latest
+    container_name: grafana
+    hostname: grafana
+    depends_on:
+      tempo:
+        condition: service_healthy
+      prometheus:
+        condition: service_healthy
     volumes:
-      - ./grafana.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./grafana/bootstrap.ini:/etc/grafana/grafana.ini
+      - ./grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
     environment:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
-      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor
     ports:
-      - "3333:3333"
+      - "3000:3000"
+    healthcheck:
+      interval: 5s
+      retries: 10
+      test: wget --no-verbose --tries=1 --spider http://localhost:3000 || exit 1
+    networks:
+      - telemetry
+
+networks:
+  telemetry:
+    name: telemetry-network
