--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -29,12 +29,14 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@opentelemetry/api": "1.8.0",
+    "@opentelemetry/api": "1.3.0",
     "@opentelemetry/exporter-metrics-otlp-grpc": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-grpc": "0.41.2",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.49.1",
     "@opentelemetry/resources": "1.15.2",
     "@opentelemetry/sdk-metrics": "1.15.2",
     "@opentelemetry/sdk-node": "0.41.2",
+    "@opentelemetry/sdk-trace-node": "1.15.2",
     "@opentelemetry/semantic-conventions": "1.15.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
