--- a/infra/otel/config.yaml
+++ b/infra/otel/config.yaml
@@ -5,9 +5,6 @@ receivers:
         endpoint: 0.0.0.0:4317 #default
       http:
         endpoint: 0.0.0.0:4318 #default
-        cors:
-          allowed_origins:
-            - http://localhost:3012
 
 processors:
   batch:
@@ -22,11 +19,12 @@ extensions:
 exporters:
   prometheus:
     endpoint: collector:6666
-    # namespace: default
   otlp:
     endpoint: tempo:4317
     tls:
       insecure: true
+  logging:
+    verbosity: detailed
 
 service:
   pipelines:
@@ -37,6 +35,7 @@ service:
         - batch
       exporters:
         - prometheus
+        - logging
     traces:
       receivers:
         - otlp
@@ -44,6 +43,7 @@ service:
         - batch
       exporters:
         - otlp
+        - logging
   extensions: [health_check]
 
   telemetry:
