fix: add processor resource

--- a/infra/otel/config.yaml
+++ b/infra/otel/config.yaml
@@ -12,6 +12,8 @@ processors:
     send_batch_size: 1024
   resource:
     attributes:
+      - action: insert
+        value: raw
 
 extensions:
   health_check:
