--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/node-cron": "^3.0.11",
     "@types/selenium-webdriver": "^4.1.22",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
@@ -32,14 +33,12 @@
     "@opentelemetry/api": "1.3.0",
     "@opentelemetry/exporter-metrics-otlp-grpc": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-grpc": "0.41.2",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.49.1",
     "@opentelemetry/resources": "1.15.2",
-    "@opentelemetry/sdk-metrics": "1.15.2",
     "@opentelemetry/sdk-node": "0.41.2",
-    "@opentelemetry/sdk-trace-node": "1.15.2",
     "@opentelemetry/semantic-conventions": "1.15.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "selenium-webdriver": "^4.18.1"
+    "cors": "2.8.5",
+    "express": "4.18.3",
+    "node-cron": "3.0.3",
+    "selenium-webdriver": "4.18.1"
   }
 }
