--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -20,14 +20,14 @@
   },
   "homepage": "https://github.com/andrelmmartins/webscraper-monitor#readme",
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node-cron": "^3.0.11",
-    "@types/selenium-webdriver": "^4.1.22",
-    "nodemon": "^3.1.0",
-    "rimraf": "^5.0.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.21",
+    "@types/node-cron": "3.0.11",
+    "@types/selenium-webdriver": "4.1.22",
+    "nodemon": "3.1.0",
+    "rimraf": "5.0.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   },
   "dependencies": {
     "@opentelemetry/api": "1.3.0",
@@ -36,6 +36,7 @@
     "@opentelemetry/resources": "1.15.2",
     "@opentelemetry/sdk-node": "0.41.2",
     "@opentelemetry/semantic-conventions": "1.15.2",
+    "axios": "1.6.8",
     "cors": "2.8.5",
     "express": "4.18.3",
     "node-cron": "3.0.3",
