--- a/scraper-service/package.json
+++ b/scraper-service/package.json
@@ -24,6 +24,7 @@
     "@types/express": "4.17.21",
     "@types/node-cron": "3.0.11",
     "@types/selenium-webdriver": "4.1.22",
+    "@types/uuid": "^9.0.8",
     "nodemon": "3.1.0",
     "rimraf": "5.0.5",
     "ts-node": "10.9.2",
@@ -38,8 +39,11 @@
     "@opentelemetry/semantic-conventions": "1.15.2",
     "axios": "1.6.8",
     "cors": "2.8.5",
+    "dotenv": "^16.4.5",
     "express": "4.18.3",
+    "fs": "^0.0.1-security",
     "node-cron": "3.0.3",
-    "selenium-webdriver": "4.18.1"
+    "selenium-webdriver": "4.18.1",
+    "uuid": "^9.0.1"
   }
 }
